Clarified wording in introduction and cleaned up formatting

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# MixMod Tutorial\n",
     "\n",
-    "Welcome to the MixMod tutorial! Here we'll go over the basic functionality of MixMod. It's a small package, so the explanation of the MixtureModel class will be brief and will largely focus on formatting the inputs correctly. (Mixture models are relatively parameter-rich, so the syntax for properly specifying all the components can be a little verbose!) The first portion of this tutorial is a brief introduction to mixture models, their use cases, and why parameter inference is a hard problem, so feel free to skip to the MixMod Class section if you're already familiar with mixture model theory.\n",
+    "Welcome to the MixMod tutorial! Here we'll go over the basic functionality of MixMod. It's a small package, so the explanation of the MixtureModel class will be brief and will largely focus on formatting the inputs correctly. (Mixture models are relatively parameter-rich, so the syntax for properly specifying all the components can be a little verbose!) The first portion of this tutorial is a brief introduction to mixture models, their use cases, and why parameter inference is a hard problem, so feel free to skip to the second section if you're already familiar with mixture model theory.\n",
     "\n",
     "## 1 Mixture Model Theory\n",
     "\n",
@@ -23,20 +23,21 @@
     "- A set of *K* parameters, each specifying the parameters of its corresponding mixture component. In many cases, each \"parameter\" is actually a set of parameters. For example, if the mixture components are normal distributions, each component will have a mean and variance.\n",
     "- A set of *K* mixture weights, which are probabilities that sum to 1.\n",
     "\n",
-    "The probability density function for a mixture model evaluated at $x_i$ is given by:\n",
+    "The probability density function for a mixture model evaluated at $x_i$ is given by\n",
     "\n",
-    "$$ f(x_i) = \\sum_{k=1}^K \\phi_k f_k(x_i; \\theta_k) $$\n",
+    "$$\n",
+    "f(x_i) = \\sum_{k=1}^K \\phi_k f_k(x_i; \\theta_k)\n",
+    "$$\n",
     "\n",
     "where $K$ is number of components, $\\phi_k$ is the weight, $f_k$ is the pdf, and $\\theta_k$ is the parameter set of each component.\n",
     "\n",
+    "The above equation applies to a mixture model for an observation with an unknown class label. If the class label, $z_i$, is known, then the density function is given by\n",
     "\n",
-    "\n",
-    "The above equation applies to a mixture model for an observation with an unknown class label. If the class label, $z_i$, is known, then the density function is given by:\n",
-    "\n",
-    "$$ f(x_i) = \\sum_{k=1}^K \\delta_{kz_i} \\phi_k f_k(x_i; \\theta_k) $$\n",
+    "$$\n",
+    "f(x_i) = \\sum_{k=1}^K \\delta_{kz_i} \\phi_k f_k(x_i; \\theta_k)\n",
+    "$$\n",
     "\n",
     "where $\\delta_{ij}$ is the Kronecker delta function.\n",
-    "\n",
     "\n",
     "Since $\\delta_{ij} = 0$ when $i \\ne j$, this equation reduces to the distribution corresponding to the class of the observation.\n",
     "\n",
@@ -789,7 +790,7 @@
    "source": [
     "### 2.7 Fitting a zero-inflated discrete MixtureModel\n",
     "\n",
-    "Although we've only seen examples of continuous distributions so far, MixMod also supports a number of discrete distributions, including the binomial, Poisson, and geometric distributions. A common application of discrete mixture models is fitting zero-inflated data, *i.e.*, data with an \"excess\" number of zeros. In these cases, the data is often the result of two distinct processes. The first is whatever is creating the \"distribution\" over many values, and the second is something that only generates values of zero. A more concrete (and non-serious) example is the number of colds each person in population catches in year. Most people catch a handful of colds, but some lucky fraction, as a result of either fastidious hygeine or superior genetics, never seem to get sick.\n",
+    "Although we've only seen examples of continuous distributions so far, MixMod also supports a number of discrete distributions, including the binomial, Poisson, and geometric distributions. A common application of discrete mixture models is fitting zero-inflated data, *i.e.*, data with an \"excess\" number of zeros. In these cases, the data are often the result of two distinct processes. The first is whatever is creating the \"distribution\" over many values, and the second is something that only generates values of zero. A more concrete (and non-serious) example is the number of colds each person in population catches in year. Most people catch a handful of colds, but some lucky fraction, as a result of either fastidious hygeine or superior genetics, never seem to get sick.\n",
     "\n",
     "Let's model this scenario with a combination of a \"zero\" and a Poisson distribution. We'll exaggerate the parameters to make the contribution of the \"zero\" process obvious."
    ]
