Made italics K into latex and fixed typo in parameterization

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -19,9 +19,9 @@
     "\n",
     "Let's now give a more formal definition of mixture models (which is adapted from [Wikipedia](https://en.wikipedia.org/wiki/Mixture_model)). A mixture model consists of the following components:\n",
     "\n",
-    "- A set of *K* mixture components, each of which is a probability distribution.\n",
-    "- A set of *K* parameters, each specifying the parameters of its corresponding mixture component. In many cases, each \"parameter\" is actually a set of parameters. For example, if the mixture components are normal distributions, each component will have a mean and variance.\n",
-    "- A set of *K* mixture weights, which are probabilities that sum to 1.\n",
+    "- A set of $K$ mixture components, each of which is a probability distribution.\n",
+    "- A set of $K$ parameters, each specifying the parameters of its corresponding mixture component. In many cases, each \"parameter\" is actually a set of parameters. For example, if the mixture components are normal distributions, each component will have a mean and variance.\n",
+    "- A set of $K$ mixture weights, which are probabilities that sum to 1.\n",
     "\n",
     "The probability density function for a mixture model evaluated at $x_i$ is given by\n",
     "\n",
@@ -74,7 +74,7 @@
    "id": "eecca192",
    "metadata": {},
    "source": [
-    "Now let's generate some data. We'll start with a simple mixture of two normal distributions. In the SciPy stats implementation, the mean and standard deviation are specified with the `loc` and `scale` parameters, respectively. This is standard practice within this module as well as in statistics more broadly. Distributions are often characterized by different, but related, parameters depending on the context. However, most of these can be expressed in a standard form as either a location or scale parameter. Location parameters shift the position of the distribution whereas scale parameters control the spread. Both of these have formal mathematical definitions which define these ideas precisely. The practical take-away, however, is the SciPy implementations of distributions express all location and scale parameters in their standard forms. These forms may differ from the conventional parametrizations, so be sure to read the documentation for each distribution thoroughly."
+    "Now let's generate some data. We'll start with a simple mixture of two normal distributions. In the SciPy stats implementation, the mean and standard deviation are specified with the `loc` and `scale` parameters, respectively. This is standard practice within this module as well as in statistics more broadly. Distributions are often characterized by different, but related, parameters depending on the context. However, most of these can be expressed in a standard form as either a location or scale parameter. Location parameters shift the position of the distribution whereas scale parameters control the spread. Both of these have formal mathematical definitions which define these ideas precisely. The practical take-away, however, is the SciPy implementations of distributions express all location and scale parameters in their standard forms. These forms may differ from the conventional parameterizations, so be sure to read the documentation for each distribution thoroughly."
    ]
   },
   {
